add update and delete links
