# internal/link/infrastructure/repository/interface.go
@@ -10,7 +10,10 @@ import (
 type Repository interface {
 	CreateLink(c context.Context, request *link.LinkDTO) error
 	GetLinks(c context.Context, userID uuid.UUID) ([]link.Link, error)
+	GetLink(c context.Context, id, userID uuid.UUID) (*link.Link, error)
 	GetLinkBySlug(c context.Context, slug string) (*link.RedirectLink, error)
+	DeleteLink(c context.Context, id uuid.UUID) error
+	UpdateLink(c context.Context, id uuid.UUID, request *link.LinkDTO) error
 
 	CreateLinkVisitEvent(c context.Context, dto *link.LinkVisitEventDTO) error
 }
